--- a/src/Pages/SinglePost/SinglePost.css
+++ b/src/Pages/SinglePost/SinglePost.css
@@ -1,14 +1,3 @@
-.line-numbers-wrapper {
-    position: relative;
-    padding-left: 0;
-  }
-  .line-numbers-wrapper > code { color: #bbb; }
-  
-  .line-numbers-code {
-    margin: 0;
-    padding: 0;
-    overflow: visible;
-    position: absolute; top: 0px; left: 3.3rem;
-    z-index: 1;
-    border: none;
-  }
+.syntaxhighlighter .gutter .line {
+    border-right: 3px solid #6ce26c !important;
+}
