--- a/src/Pages/SinglePost/SinglePost.css
+++ b/src/Pages/SinglePost/SinglePost.css
@@ -1,3 +1,91 @@
+.syntaxhighlighter .plain, .syntaxhighlighter .plain a {
+    color: black !important;
+}
+element.style {
+}
+.syntaxhighlighter .keyword {
+    font-weight: bold !important;
+}
+.syntaxhighlighter .keyword {
+    color: #006699 !important;
+}
+.syntaxhighlighter code {
+    display: inline !important;
+}
+.syntaxhighlighter .string, .syntaxhighlighter .string a {
+    color: blue !important;
+}
+.syntaxhighlighter .comments, .syntaxhighlighter .comments a {
+    color: #008200 !important;
+}
+.syntaxhighlighter a, .syntaxhighlighter div, .syntaxhighlighter code, .syntaxhighlighter table, .syntaxhighlighter table td, .syntaxhighlighter table tr, .syntaxhighlighter table tbody, .syntaxhighlighter table thead, .syntaxhighlighter table caption, .syntaxhighlighter textarea {
+    -moz-border-radius: 0 0 0 0 !important;
+    -webkit-border-radius: 0 0 0 0 !important;
+    background: none !important;
+    border: 0 !important;
+    bottom: auto !important;
+    float: none !important;
+    height: auto !important;
+    left: auto !important;
+    line-height: 1.1em !important;
+    margin: 0 !important;
+    outline: 0 !important;
+    overflow: visible !important;
+    padding: 0 !important;
+    position: static !important;
+    right: auto !important;
+    text-align: left !important;
+    top: auto !important;
+    vertical-align: baseline !important;
+    width: auto !important;
+    box-sizing: content-box !important;
+    font-family: Monaco, "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
+    font-weight: normal !important;
+    font-style: normal !important;
+    font-size: 1em !important;
+    direction: ltr !important;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    -ms-box-shadow: none !important;
+    -o-box-shadow: none !important;
+    box-shadow: none !important;
+}
+code, kbd, tt, var {
+    font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
+    font-size: 16px;
+}
+code, kbd, pre, samp {
+    font-family: monospace,monospace;
+    font-size: 1em;
+}
+
+.syntaxhighlighter .gutter {
+    color: #afafaf !important;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+.syntaxhighlighter table td.gutter .line {
+    text-align: right !important;
+    padding: 0 0.5em 0 1em !important;
+}
 .syntaxhighlighter .gutter .line {
     border-right: 3px solid #6ce26c !important;
+}
+.syntaxhighlighter .line.alt2 {
+    background-color: white !important;
+}
+.syntaxhighlighter .line {
+    white-space: pre !important;
+}
+
+.syntaxhighlighter table td.code .line {
+    padding: 0 1em !important;
+}
+.syntaxhighlighter .line.alt1 {
+    background-color: white !important;
+}
+.syntaxhighlighter .line {
+    white-space: pre !important;
 }
