--- a/src/Pages/SinglePost/SinglePost.css
+++ b/src/Pages/SinglePost/SinglePost.css
@@ -1,3 +1,10 @@
+.box{
+    border: 1px solid black;
+    height: 480px;
+    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
 .syntaxhighlighter .plain, .syntaxhighlighter .plain a {
     color: black !important;
 }
